--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-motion": "^1.1.0",
     "typescript": "^5"
   }
 }
