--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "^12.4.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.0",
